Fix height bug on mobile

--- a/views/css/mobile.scss
+++ b/views/css/mobile.scss
@@ -139,7 +139,7 @@
 							}
 
 							&-playlists {
-								max-height: 374px;
+								max-height: 408px;
 
 								.nav-item {
 									text-align: center;
